--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/LongPeo/DongBo-BatDongBo-b11#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "request": "^2.88.2",
     "yarn": "^1.22.0"
   }
